alignment corrections

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -327,6 +327,9 @@
   margin-bottom: 1rem;
   display: block;
 }
+#quote {
+  text-align: center;
+}
 .icon-3d {
   padding: 10px;
   animation: icon3d 200ms 10;
